--- a/package.json
+++ b/package.json
@@ -6,22 +6,21 @@
   "bin": {
     "mailinary": "bin/mailinary"
   },
-  "scripts": {
-  },
+  "scripts": {},
   "author": "",
   "license": "MIT",
   "dependencies": {
     "bunyan": "^1.8.12",
-    "cloudinary": "^1.11.0",
-    "commander": "^2.17.1",
-    "config": "^3.0.0",
-    "dotenv": "^6.1.0",
-    "moment": "^2.22.2",
-    "node-schedule": "^1.3.0",
-    "nodemailer": "^4.6.7",
-    "nodemon": "^1.18.3",
-    "puppeteer": "^1.7.0",
-    "uuid": "^3.3.2"
+    "cloudinary": "^1.14.0",
+    "commander": "^3.0.0",
+    "config": "^3.2.2",
+    "dotenv": "^8.1.0",
+    "moment": "^2.24.0",
+    "node-schedule": "^1.3.2",
+    "nodemailer": "^6.3.0",
+    "nodemon": "^1.19.1",
+    "puppeteer": "^1.19.0",
+    "uuid": "^3.3.3"
   },
   "devDependencies": {
     "http-server": "^0.11.1"
